<resources>
    <string name="app_name">1byone Health</string>
    <string name="open">打开</string>
    <string name="close">关闭</string>
    <string name="MeasurementTabName">测量</string>
    <string name="HistoryTabName">历史</string>
    <string name="RemindersTabName">提醒</string>
    <string name="add_remind">添加提醒</string>
    <string name="add_remind_time">时间</string>
    <string name="radial_time_picker_result_value">%1$d:%2$d</string>
    <string name="add_remind_repeat">重复</string>
    <string name="visitor_mode">访客模式</string>
    <string name="hold_baby_mode">抱婴模式</string>
    <string name="no_device_tip">未连接</string>
    <string name="login">登录</string>
    <string name="register">Join 1byone Health</string>
    <string name="user_name">User Name</string>
    <string name="email">Email</string>
    <string name="password">Password(6-16 digital numbers or letters)</string>
    <string name="register_tip">By clicking next, you confirm that you have read and agree</string>
    <string name="privacy_police">privacy police</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="go_to_register">去注册</string>
    <string name="user_information">个人资料</string>
    <string name="baby_information">添加婴儿资料</string>
    <string name="technical_support">技术支持</string>
    <string name="send_email">发送</string>
    <string name="send_email_title">主题</string>
    <string name="send_email_content">内容</string>
    <string name="app_setting">设置</string>
    <string name="setting_google_fit">Google Fit</string>

    <string name="preferenceScreen_title">Scan Filter</string>
    <string name="listPreference_dialogTitle">Choose Broadcast Type</string>
    <string name="listPreference_title">Broadcast Type</string>
    <string name="multiSelectListPreference_dialogTitle">Choose Device Type</string>
    <string name="multiSelectListPreference_title">Device Type</string>

    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="permission_bluetooth">Need to start bluetooth</string>
    <string name="permission_title_rationale">Authority requirement</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

</resources>
