<?xml version="1.0" encoding="utf-8"?>   
  <PreferenceScreen   
            xmlns:android="http://schemas.android.com/apk/res/android"   
            android:key="using_categories_in_root_screen"   
            android:title="@string/preferenceScreen_title">  

      <PreferenceCategory
          xmlns:android="http://schemas.android.com/apk/res/android"
          android:key="scan_filter_screen"
          android:title="Device Scan Filter" >
          <ListPreference
              xmlns:android="http://schemas.android.com/apk/res/android"
              android:dialogTitle="@string/listPreference_dialogTitle"
              android:key="broadcast_type"
              android:title="@string/listPreference_title" >
          </ListPreference>

          <MultiSelectListPreference
              xmlns:android="http://schemas.android.com/apk/res/android"
              android:dialogTitle="@string/multiSelectListPreference_dialogTitle"
              android:key="device_type"
              android:title="@string/multiSelectListPreference_title" >
          </MultiSelectListPreference>
      </PreferenceCategory>
      
       <PreferenceCategory
          xmlns:android="http://schemas.android.com/apk/res/android"
          android:key="add_barcode_screen"
          android:title="Product Barcode" >
          <EditTextPreference 
              android:key="add_barcode_preference"
              android:title="Set Product Barcode"
              android:summary="Set the product barcode for connection conditions"
              android:dialogTitle="Product Barcode" />
           
      </PreferenceCategory>
</PreferenceScreen>   
