<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_bottom_switcher_container"
    android:layout_width="match_parent"
    android:layout_height="70dp"
    android:background="@color/md_light_appbar"
    android:orientation="horizontal">

    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:src="@drawable/main_measurements"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_gravity="bottom"
            android:gravity="center"
            android:text="@string/MeasurementTabName"
            android:textColor="@color/main_bottom_tv_color" />
    </FrameLayout>
    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:src="@drawable/main_history"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_gravity="bottom"
            android:gravity="center"
            android:text="@string/HistoryTabName"
            android:textColor="@color/main_bottom_tv_color" />
    </FrameLayout>
    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:src="@drawable/main_remind"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_gravity="bottom"
            android:gravity="center"
            android:text="@string/RemindersTabName"
            android:textColor="@color/main_bottom_tv_color" />
    </FrameLayout>
</LinearLayout>