<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <com.a1byone.bloodpressure.ui.widget.TitleBar
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/layout_margin_top_20"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/register_image_width"
            android:layout_height="@dimen/register_image_height"
            android:layout_marginStart="@dimen/text_margin_left"
            android:background="@drawable/geren"/>

        <EditText
            android:id="@+id/et_username"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@null"
            android:maxLines="1"
            android:lines="1"
            android:inputType="text"
            android:textSize="@dimen/text_size_15"
            android:layout_marginLeft="@dimen/text_margin_left"
            android:layout_gravity="center_vertical"
            android:hint="@string/user_name"/>

    </LinearLayout>
    
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/xuxian"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/layout_margin_top_10"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/register_image_width"
            android:layout_height="15dp"
            android:layout_marginStart="@dimen/text_margin_left"
            android:background="@drawable/youxiang"/>

        <EditText
            android:id="@+id/et_email"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@null"
            android:maxLines="1"
            android:lines="1"
            android:inputType="text"
            android:textSize="@dimen/text_size_15"
            android:layout_marginLeft="@dimen/text_margin_left"
            android:layout_gravity="center_vertical"
            android:hint="@string/email"/>

    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/xuxian"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/layout_margin_top_10"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/register_image_width"
            android:layout_height="@dimen/register_image_height"
            android:layout_marginStart="@dimen/text_margin_left"
            android:background="@drawable/password"/>

        <EditText
            android:id="@+id/et_password"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@null"
            android:maxLines="1"
            android:lines="1"
            android:inputType="text"
            android:textSize="@dimen/text_size_15"
            android:layout_marginLeft="@dimen/text_margin_left"
            android:layout_gravity="center_vertical"
            android:hint="@string/password"/>

    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/xuxian"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/layout_margin_top_10"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/register_image_width"
            android:layout_height="@dimen/register_image_height"
            android:layout_marginStart="@dimen/text_margin_left"
            android:background="@drawable/confirm"/>

        <EditText
            android:id="@+id/et_confirm_password"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@null"
            android:maxLines="1"
            android:lines="1"
            android:inputType="text"
            android:textSize="@dimen/text_size_15"
            android:layout_marginLeft="@dimen/text_margin_left"
            android:layout_gravity="center_vertical"
            android:hint="@string/confirm_password"/>

    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/xuxian"/>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="@dimen/layout_high_40"
        android:layout_marginStart="@dimen/margin_20"
        android:layout_marginEnd="@dimen/margin_20"
        android:background="@drawable/next"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_privacy_police_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_margin_top_15"
            android:layout_marginStart="@dimen/margin_20"
            android:layout_marginEnd="@dimen/margin_20"
            android:text="@string/register_tip"/>

        <TextView
            android:id="@+id/tv_privacy_police"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/tv_privacy_police_text"
            android:layout_alignStart="@+id/tv_privacy_police_text"
            android:layout_marginStart="40dp"
            android:text="@string/privacy_police"
            android:textColor="@color/md_cyan_A800" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="@dimen/layout_high_40"
            android:layout_alignEnd="@+id/tv_privacy_police_text"
            android:layout_alignParentBottom="true"
            android:layout_alignStart="@+id/tv_privacy_police_text"
            android:layout_marginBottom="25dp"
            android:background="@drawable/alreadyhaveanaccount" />
    </RelativeLayout>

</LinearLayout>
